--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <script type="text/javascript" src="js/main.js"></script>
     <button onclick="daBaby()" class="middle" id="letsGo">
-      <img src="/img/before.png" />
+      <img src="img/before.png" />
     </button>
   </body>
 </html>
