--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <script type="text/javascript" src="js/main.js"></script>
-    <button onclick="daBaby()" class="middle" id="letsGo">
-      <img src="img/before.png" />
-    </button>
+    <div class="middle">
+      <button onclick="daBaby()" class="button1" id="letsGo">
+        <img src="img/before.png" />
+      </button>
+      <button onclick="reset()">Reset</button>
+    </div>
   </body>
 </html>
