--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dababy</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="img/after.png" />
+
+    <meta property="og:image" content="dababy" />
+
+    <meta
+      property="og:description"
+      content="Ey LETS GO"
+    />
+
+    <meta
+      property="og:url"
+      content="https://xavierbrasher.github.io/DaBaby/index"
+    />
+
+    <meta property="og:title" content="DaBaby" />
+  </head>
   </head>
   <body>
     <script type="text/javascript" src="js/main.js"></script>
