--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       name="Choose What Sound"
       content="Choose What Sound You Would Like To Play!"
     />
-    <title>Dababy</title>
+    <title>Sounds</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="icon" href="img/after.png" />
+    <link rel="icon" href="img/afterSH.png" />
     <style>
       h1 {
         position: fixed;
@@ -27,16 +27,16 @@
         font-size: 10px;
       }
     </style>
-    <meta property="og:image" content="dababy" />
+    <meta property="og:image" content="sounds" />
 
-    <meta property="og:description" content="Ey LETS GO" />
+    <meta property="og:description" content="random sounds and images" />
 
     <meta
       property="og:url"
-      content="https://xavierbrasher.github.io/DaBaby/index"
+      content="https://xavierbrasher.github.io/sounds/index"
     />
 
-    <meta property="og:title" content="DaBaby" />
+    <meta property="og:title" content="Sounds" />
   </head>
   <body>
     <h1>Main Page: Choose the sound</h1>
