--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
 
     <meta property="og:description" content="random sounds and images" />
 
-    <meta
-      property="og:url"
-      content="https://xavierbrasher.github.io/sounds/index"
-    />
+    <meta property="og:url" content="https://xavierbrasher.github.io/sounds/" />
 
     <meta property="og:title" content="Sounds" />
   </head>
