--- a/saying_things/sheesh.html
+++ b/saying_things/sheesh.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dababy</title>
+    <title>SHEESH</title>
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="icon" href="../img/after.png" />
+    <link rel="icon" href="../img/afterSH.png" />
 
-    <meta property="og:image" content="letsGO" />
+    <meta property="og:image" content="../img/afterSH" />
 
     <meta
       property="og:description"
-      content="Ey LETS GO"
+      content="SHEESH"
     />
 
     <meta
       property="og:url"
-      content="https://xavierbrasher.github.io/DaBaby/index"
+      content="https://xavierbrasher.github.io/sounds/saying_things/sheesh"
     />
 
-    <meta property="og:title" content="DaBaby" />
+    <meta property="og:title" content="sheesh" />
   </head>
   </head>
   <body>
